# biblios

./: Cargo.toml
src/: app.rs  main.rs
src/bible/: loader.rs  mod.rs  parser.rs  search.rs
src/config/: bookmarks.rs  mod.rs  settings.rs  state.rs
src/input/: mod.rs  normal.rs  vim.rs
src/ui/: bookmarks.rs  help.rs  icons.rs  mod.rs  reader.rs  search.rs  settings.rs  theme_picker.rs  themes.rs  verse_selector.rs
src/ui/components/: filtered_select.rs  mod.rs
src/utils/: focus.rs
