[package]
name = "biblios"
version = "0.1.0"
edition = "2021"
authors = ["Biblios Contributors"]
description = "A full-featured TUI Bible reader in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/biblios"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database for Bible data
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Search
nucleo = "0.5"

# Async runtime (for future features)
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
